How to add comments along with <br> and <hr> tags

--- a/tester.html
+++ b/tester.html
@@ -1,11 +1,17 @@
-<<!DOCTYPE html>
-<html lang="en" dir="ltr">
+<!DOCTYPE html>
+  <html lang="en" dir="ltr">
+
   <head>
     <meta charset="utf-8">
+    <hr noshade size=3>
     <title>This is a test</title>
   </head>
+
   <body>
-    <<h1>The Adventures of a Good Boi</h1>
-    <<h3>There is no adventure I Lied</h3>
+    <h1>The Adventures of a Good Boi</h1>
+      <br>
+        <h3>There is no adventure I Lied</h3>
+        <hr noshade size=3>
   </body>
-</html>
+
+  </html>
