Moving on to adding table and images, along with more into styling using CSS

--- a/tester.html
+++ b/tester.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
-  <html lang="en" dir="ltr">
+  <html lang="en" dir="ltr" style="style.css">
 
   <head>
     <meta charset="utf-8">
-    <hr noshade size=3>
     <title>This is a test</title>
+    <link rel="stylesheet" href="./css/styles.css">
+    <table>
+      <tr>
+        <td>
+          <img src="op.jpg" alt="One Piece" id="logo" style="width:100px;height:100px;">
+        </td>
+        <td>
+          <h1>The Adventures of a Good Boi</h1>
+        </td>
+      </tr>
+    </table>
   </head>
 
   <body>
-    <h1>The Adventures of a Good Boi</h1>
-      <br>
-        <h3>There is no adventure I Lied</h3>
+        <h3>There is no <em>adventure</em> I Lied</h3>
+        <!-- This is a comment and its syntax-->
         <hr noshade size=3>
   </body>
 
