Using <div> to make containers and CSS styling using classes and hover

--- a/tester.html
+++ b/tester.html
@@ -8,7 +8,7 @@
     <table>
       <tr>
         <td>
-          <img src="op.jpg" alt="One Piece" id="logo" style="width:100px;height:100px;">
+          <img class="circular" src="op.jpg" alt="One Piece" id="logo" style="width:100px;height:100px;">
         </td>
         <td>
           <h1>The Adventures of a Good Boi</h1>
@@ -22,5 +22,12 @@
         <!-- This is a comment and its syntax-->
         <hr noshade size=3>
   </body>
+
+  <div class="middle-container">
+
+  </div>
+  <div class="bottom-container">
+
+  </div>
 
   </html>
