--- a/tester.html
+++ b/tester.html
@@ -4,30 +4,18 @@
   <head>
     <meta charset="utf-8">
     <title>This is a test</title>
-    <link rel="stylesheet" href="./css/styles.css">
-    <table>
-      <tr>
-        <td>
-          <img class="circular" src="op.jpg" alt="One Piece" id="logo" style="width:100px;height:100px;">
-        </td>
-        <td>
-          <h1>The Adventures of a Good Boi</h1>
-        </td>
-      </tr>
-    </table>
+    <link rel="stylesheet" href="css/styles.css">
+    <!-- "Icon made by Freepik from www.flaticon.com" -->
+    <link rel="icon" href="Resources/icon.png">
   </head>
 
   <body>
-        <h3>There is no <em>adventure</em> I Lied</h3>
-        <!-- This is a comment and its syntax-->
-        <hr noshade size=3>
-  </body>
-
-  <div class="middle-container">
-
-  </div>
-  <div class="bottom-container">
-
-  </div>
-
+    <div class="top-container">
+      <img id="cloud1" src="Resources/cloud.png" alt="cloud-img">
+      <h1 font: bookman;>Hi! I'm Tanveer</h1>
+      <h3>I am a Software developer</h3>
+      <img id="cloud2" src="Resources/cloud.png" alt="cloud-img">
+      <img id="mountain" src="Resources/mountain.png" alt="mountain-img">
+    </body>
+    </div>
   </html>
