--- a/tester.html
+++ b/tester.html
@@ -4,6 +4,9 @@
   <head>
     <meta charset="utf-8">
     <title>This is a test</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <!-- "Icon made by Freepik from www.flaticon.com" -->
     <link rel="icon" href="Resources/icon.png">
@@ -12,7 +15,7 @@
   <body>
     <div class="top-container">
       <img id="cloud1" src="Resources/cloud.png" alt="cloud-img">
-      <h1 font: bookman;>Hi! I'm Tanveer</h1>
+      <h1>Hi! I'm Tanveer</h1>
       <h3>I am a Software developer</h3>
       <img id="cloud2" src="Resources/cloud.png" alt="cloud-img">
       <img id="mountain" src="Resources/mountain.png" alt="mountain-img">
