Made some changes and configured it to be fit for a software developer

--- a/tester.html
+++ b/tester.html
@@ -1,24 +1,31 @@
 <!DOCTYPE html>
   <html lang="en" dir="ltr" style="style.css">
 
+  <!-- All icons were courtesy of FlatIcon : www.flaticon.com and FreePik : www.freepik.com -->
+
   <head>
     <meta charset="utf-8">
-    <title>This is a test</title>
+    <title>CVV</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <!-- "Icon made by Freepik from www.flaticon.com" -->
-    <link rel="icon" href="Resources/icon.png">
+    <div class="top-container">
+      <img class="header" src="Resources/programming.png" alt="programming-logo">
+      <h1>Hi! I'm Tanveer Singh</h1>
+      <h2>I am a Software developer</h2>
+      <hr class="top-divider">
+    </div>
   </head>
 
   <body>
-    <div class="top-container">
-      <img id="cloud1" src="Resources/cloud.png" alt="cloud-img">
-      <h1>Hi! I'm Tanveer</h1>
-      <h3>I am a Software developer</h3>
-      <img id="cloud2" src="Resources/cloud.png" alt="cloud-img">
-      <img id="mountain" src="Resources/mountain.png" alt="mountain-img">
-    </body>
+    <div class="skills">
+      <img class="skill-logo" src="Resources/skills.png" alt="coding-logo-img">
+      <h1 class="skill-header">Skills</h1>
+      <div class="Java">
+        <h3>Java</h3>
+      </div>
     </div>
+  </body>
   </html>
