--- a/tester.html
+++ b/tester.html
@@ -1,82 +1,84 @@
 <!DOCTYPE html>
-  <html lang="en" dir="ltr" style="style.css">
+<html lang="en" dir="ltr" style="style.css">
 
-  <!-- All icons were courtesy of FlatIcon : www.flaticon.com and FreePik : www.freepik.com -->
+<!-- All icons were courtesy of FlatIcon : www.flaticon.com and FreePik : www.freepik.com -->
 
-  <head>
-    <meta charset="utf-8">
-    <title>CVV</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
-    <!-- "Icon made by Freepik from www.flaticon.com" -->
-    <div class="top-container">
-      <img class="header" src="Resources/programming.png" alt="programming-logo">
-      <h1>Hello! I'm Tanveer Singh</h1>
-      <h2>I am a Software developer</h2>
-      <hr class="top-divider">
-    </div>
-  </head>
+<head>
+  <meta charset="utf-8">
+  <title>CVV</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="Resources/bootstrap-5.1.0-dist/css/bootstrap.css">
+  <!-- "Icon made by Freepik from www.flaticon.com" -->
+  <div class="top-container">
+    <img class="header" src="Resources/programming.png" alt="programming-logo">
+    <h1>Hello! I'm Tanveer Singh</h1>
+    <h2>I am a Software developer</h2>
+    <hr class="top-divider">
+  </div>
+</head>
 
-  <body>
-    <div class="skills">
-      <img class="skill-logo" src="Resources/skills.png" alt="coding-logo-img">
-      <h1 class="skill-header">Skills</h1>
-      <div class="skill-row">
-        <img class="java-logo" src="Resources/jav.png" alt="java-logo">
-        <h3 class="java">Java</h3>
-        <p class="java">Proficient in java for both front end and back end development using
+<body>
+  <div class="skills">
+    <img class="skill-logo" src="Resources/skills.png" alt="coding-logo-img">
+    <h1 class="skill-header">Skills</h1>
+    <div class="skill-row">
+      <img class="java-logo" src="Resources/jav.png" alt="java-logo">
+      <h3 class="java">Java</h3>
+      <p class="java">Proficient in java for both front end and back end development using
         various modules and libraries such javafx, etc. Have 2 years of experience
         in developing full fledged working real-world applications and dealing with
         numerous data structures as well as latest jdk16.</p>
-      </div>
-      <br>
-      <div class="skill-row">
-        <img class="python-logo" src="Resources/python.png" alt="python-logo">
-        <h3 class="python">Python</h3>
-        <p class="python">Python experience for 2 years dealing with real-world python
+    </div>
+    <br>
+    <div class="skill-row">
+      <img class="python-logo" src="Resources/python.png" alt="python-logo">
+      <h3 class="python">Python</h3>
+      <p class="python">Python experience for 2 years dealing with real-world python
         and automations. Made several real world applications for everyday use such
         as calculators, web-scrapers and many more. Working towards learning more
         automations and machine learning using python.</p>
-      </div>
-      <br>
-      <div class="skill-row">
-        <img class="html-logo" src="Resources/html.png" alt="html-logo">
-        <h3 class="_html">HTML</h3>
-        <p class="_html">Working with HTML5 for over an year and developing websites that look appealing
+    </div>
+    <br>
+    <div class="skill-row">
+      <img class="html-logo" src="Resources/html.png" alt="html-logo">
+      <h3 class="_html">HTML</h3>
+      <p class="_html">Working with HTML5 for over an year and developing websites that look appealing
         and up to date, editing and debugging websites made by other developers and working
         towards updating them or changing them according to clients instructions while working
         with strict deadlines towards projects.</p>
-      </div>
-      <br>
-      <div class="skill-row">
-        <img class="css-logo" src="Resources/css.png" alt="css-logo">
-        <h3 class="_css">CSS</h3>
-        <p class="_css">Dealing with all types of stylesheets for over an year for
+    </div>
+    <br>
+    <div class="skill-row">
+      <img class="css-logo" src="Resources/css.png" alt="css-logo">
+      <h3 class="_css">CSS</h3>
+      <p class="_css">Dealing with all types of stylesheets for over an year for
         designing websites as well as web applications while also debugging web applications
         made by other developers and improving on it. Always willing to learn new styles
         to make websites come to life.</p>
-      </div>
-      <br>
-      <div class="skill-row">
-        <img class="javascript-logo" src="Resources/javascript.png" alt="javascript-logo">
-        <h3 class="_javascript">JavaScript</h3>
-        <p class="_javascript">An years experience developing fully functional web apps
+    </div>
+    <br>
+    <div class="skill-row">
+      <img class="javascript-logo" src="Resources/javascript.png" alt="javascript-logo">
+      <h3 class="_javascript">JavaScript</h3>
+      <p class="_javascript">An years experience developing fully functional web apps
         and websites with interactive user interfraces and dealing with various modules and
         libraries. Still learning and improving to be more efficient in JavaScript and more
         languages like React.js, Node.js and more.</p>
-      </div>
-      <br>
     </div>
-    <hr class="top-divider">
-  </body>
-  <footer>
-    <div class="foot">
-      <h2>Contact Me</h2>
-    </div>
-  </footer>
-  </html>
+    <br>
+  </div>
+  <hr class="top-divider">
+</body>
+<footer>
+  <div class="foot">
+    <h2>Contact Me</h2>
+  </div>
+</footer>
+
+</html>
