--- a/tester.html
+++ b/tester.html
@@ -6,6 +6,7 @@
 <head>
   <meta charset="utf-8">
   <title>CVV</title>
+  <link rel="stylesheet" href="Resources/bootstrap-5.1.0-dist/css/bootstrap.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,8 +14,21 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="Resources/bootstrap-5.1.0-dist/css/bootstrap.css">
   <!-- "Icon made by Freepik from www.flaticon.com" -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="">Coder</a>
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="">Contact</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="">Support</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="">Help</a>
+      </li>
+    </ul>
+  </nav>
   <div class="top-container">
     <img class="header" src="Resources/programming.png" alt="programming-logo">
     <h1>Hello! I'm Tanveer Singh</h1>
