Changed it to fit gitPages

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </li>
     </ul>
   </nav>
-  <div class="top-container">
+  <div class="top-container container-lg">
     <img class="header" src="Resources/programming.png" alt="programming-logo">
     <h1>Hello! I'm Tanveer Singh</h1>
     <h2>I am a Software developer</h2>
