Added a GIF to make the webpage more appealing

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </ul>
   </nav>
   <div class="top-container container-lg">
-    <img class="header" src="Resources/programming.png" alt="programming-logo">
+    <img class="header" src="Resources/qrcode.gif" alt="programming-logo">
     <h1>Hello! I'm Tanveer Singh</h1>
     <h2>I am a Software developer</h2>
     <hr class="top-divider">
