Updated Contact Me and positioning changes

--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="Resources/icon.png">
   <!-- "Icon made by Freepik from www.flaticon.com" -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="">Coder</a>
-    <ul class="navbar-nav ml-auto">
+    <a class="navbar-brand" href="index.html">Coder</a>
+    <ul class="navbar-nav ms-auto">
       <li class="nav-item">
         <a class="nav-link" href="">Contact</a>
       </li>
@@ -29,17 +30,19 @@
       </li>
     </ul>
   </nav>
-  <div class="top-container container-lg">
-    <img class="header" src="Resources/qrcode.gif" alt="programming-logo">
-    <h1>Hello! I'm Tanveer Singh</h1>
-    <h2>I am a Software developer</h2>
-    <br>
-    <hr class="top-divider">
-  </div>
 </head>
 
 <body>
-  <div class="skills">
+  <div class="back1">
+    <div class="top-container container-lg-12 container-md-6 container-sm-3">
+      <img class="header" src="Resources/qrcode.gif" alt="programming-logo">
+      <h1>Hello! I'm Tanveer Singh</h1>
+      <h2>I am a Software developer</h2>
+      <br>
+      <hr class="top-divider">
+    </div>
+  </div>
+  <div class="skills container-lg container-md container-sm">
     <img class="skill-logo" src="Resources/skills.png" alt="coding-logo-img">
     <h1 class="skill-header">Skills</h1>
     <div class="skill-row">
@@ -92,7 +95,7 @@
 </body>
 <footer>
   <div class="foot">
-    <h2>Contact Me</h2>
+    <a href="mailto:tanveerswaich1@gmail.com">Contact Me</a>
   </div>
 </footer>
 
