--- a/index.html
+++ b/index.html
@@ -6,17 +6,44 @@
 <head>
   <meta charset="utf-8">
   <title>CVV</title>
-  <link rel="stylesheet" href="Resources/bootstrap-5.1.0-dist/css/bootstrap.css">
+
+  <!-- Bootstrap added to the project  -->
+
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+  <!-- Fonts from fonts.google.com -->
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Signika+Negative&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="icon" href="Resources/icon.png">
+
   <!-- "Icon made by Freepik from www.flaticon.com" -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="index.html">Coder</a>
+    <a class="navbar-brand" href="index.html">
+      <img src="Resources/binary-code.png" alt="binary-code-img" height="20px" width="20px;">
+      Coder
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#projectsButton"
+      aria-controls="projectsButton" aria-expanded="false" aria-label="Dropdown Navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
     <ul class="navbar-nav ms-auto">
+
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="projectsButton" role="button" data-bs-toggle="dropdown"
+        data-target="dropdown" aria-expanded="false">
+          Projects
+        </a>
+        <ul class="dropdown-menu" aria-labelledby="projectsButton">
+            <li><a class="dropdown-item" href="diceGame/diceGame.html">Dice Game</a></li>
+            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><a class="dropdown-item" href="#">Something else here</a></li>
+        </ul>
+      </li>
       <li class="nav-item">
         <a class="nav-link" href="">Contact</a>
       </li>
@@ -88,6 +115,9 @@
     <br>
   </div>
   <hr class="top-divider">
+  <script src="index.js" charset="utf-8">
+
+  </script>
 </body>
 <footer>
   <div class="foot">
