--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>CVV</title>
 
   <!-- Bootstrap added to the project  -->
@@ -27,7 +28,7 @@
 
   <div class="container-fluid">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="index.html">
+      <a class="navbar-brand" href="mainPage.html">
         <img src="Resources/binary-code.png" alt="binary-code-img" height="20px" width="20px;">
         Coder
       </a>
