Updated names and other elements accordingly

--- a/diceGame/diceGame.html
+++ b/diceGame/diceGame.html
@@ -63,7 +63,7 @@
             <button class="btn btn-outline-success btn-lg roll" onclick="roll()"
             id="rollButton" type="button" name="roll">Roll</button>
             <hr class="buttonDiv">
-            <button class="btn btn-outline-danger btn-lg exit" onclick="window.location.href='../index.html'"
+            <button class="btn btn-outline-danger btn-lg exit" onclick="window.location.href='../skillPage.html'"
             type="button" name="back">Go Back</button>
           </div>
         </div>
