--- a/index.html
+++ b/index.html
@@ -1,140 +1,65 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr" style="style.css">
+<html lang="en" dir="ltr">
+  <head>
 
-<!-- All icons were courtesy of FlatIcon : www.flaticon.com and FreePik : www.freepik.com -->
+    <title>Tanveer Singh</title>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>CVV</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/styles.css">
 
-  <!-- Bootstrap added to the project  -->
+    <!-- Courtesy to freepik.com for backgrounds -->
 
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
-  <!-- Fonts from fonts.google.com -->
-
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Signika+Negative&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/styles.css">
-  <script type="text/javascript" src="index.js"></script>
-  <link rel="icon" href="Resources/icon.png">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
-  <!-- "Icon made by Freepik from www.flaticon.com" -->
-
-  <div class="container-fluid">
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="mainPage.html">
-        <img src="Resources/binary-code.png" alt="binary-code-img" height="20px" width="20px;">
-        Coder
-      </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#projectsButton"
-        aria-controls="projectsButton" aria-expanded="false" aria-label="Dropdown Navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item col-6 col-md-auto">
-          <a class="nav-link p-2" href="https://github.com/TanveerSwaich" target="_blank" rel="noopener">
-            <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" class="navbar-nav-svg d-inline-block align-text-top navLogo" viewBox="0 0 512 499.36" role="img"><title>GitHub</title><path fill="currentColor" fill-rule="evenodd" d="M256 0C114.64 0 0 114.61 0 256c0 113.09 73.34 209 175.08 242.9 12.8 2.35 17.47-5.56 17.47-12.34 0-6.08-.22-22.18-.35-43.54-71.2 15.49-86.2-34.34-86.2-34.34-11.64-29.57-28.42-37.45-28.42-37.45-23.27-15.84 1.73-15.55 1.73-15.55 25.69 1.81 39.21 26.38 39.21 26.38 22.84 39.12 59.92 27.82 74.5 21.27 2.33-16.54 8.94-27.82 16.25-34.22-56.84-6.43-116.6-28.43-116.6-126.49 0-27.95 10-50.8 26.35-68.69-2.63-6.48-11.42-32.5 2.51-67.75 0 0 21.49-6.88 70.4 26.24a242.65 242.65 0 0 1 128.18 0c48.87-33.13 70.33-26.24 70.33-26.24 14 35.25 5.18 61.27 2.55 67.75 16.41 17.9 26.31 40.75 26.31 68.69 0 98.35-59.85 120-116.88 126.32 9.19 7.9 17.38 23.53 17.38 47.41 0 34.22-.31 61.83-.31 70.23 0 6.85 4.61 14.81 17.6 12.31C438.72 464.97 512 369.08 512 256.02 512 114.62 397.37 0 256 0z"></path></svg>
-            <small class="d-md-none ms-2">GitHub</small>
-          </a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="projectsButton" role="button" data-bs-toggle="dropdown"
-          data-target="dropdown" aria-expanded="false">
-            Projects
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="projectsButton">
-              <li><a class="dropdown-item" href="diceGame/diceGame.html">Dice Game</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="">Contact</a>
-        </li>
-      </ul>
-    </nav>
-  </div>
-</head>
-
-<body>
-  <div class="container-fluid">
-    <div class="top-container container-lg-12 container-md-6 container-sm-3">
-      <img class="header" src="Resources/qrcode.gif" alt="programming-logo">
-      <h1>Hello! I'm Tanveer Singh</h1>
-      <h2>I am a Software developer</h2>
-      <br>
-      <hr class="top-divider">
+  </head>
+  <body>
+    <div class="bgimg-1">
+      <div class="caption">
+      <span class="border welcome2">Tanveer Singh</span>
+      </div>
     </div>
-    <div class="skills container-fluid">
-      <div class="skillWarpper">
-        <img class="skill-logo" src="Resources/skills.png" alt="coding-logo-img">
-        <h1 class="skill-header">Skills</h1>
-      </div>
-      <div class="skill-row">
-        <img class="java-logo" src="Resources/jav.png" alt="java-logo">
-        <h3 class="java">Java</h3>
-        <p class="java">Proficient in java for both front end and back end development using
-          various modules and libraries such javafx, etc. Have 2 years of experience
-          in developing full fledged working real-world applications and dealing with
-          numerous data structures as well as latest jdk16.</p>
-      </div>
-      <br>
-      <div class="skill-row">
-        <img class="python-logo" src="Resources/python.png" alt="python-logo">
-        <h3 class="python">Python</h3>
-        <p class="python">Python experience for 2 years dealing with real-world python
-          and automations. Made several real world applications for everyday use such
-          as calculators, web-scrapers and many more. Working towards learning more
-          automations and machine learning using python.</p>
-      </div>
-      <br>
-      <div class="skill-row">
-        <img class="html-logo" src="Resources/html.png" alt="html-logo">
-        <h3 class="_html">HTML</h3>
-        <p class="_html">Working with HTML5 for over an year and developing websites that look appealing
-          and up to date, editing and debugging websites made by other developers and working
-          towards updating them or changing them according to clients instructions while working
-          with strict deadlines towards projects.</p>
-      </div>
-      <br>
-      <div class="skill-row">
-        <img class="css-logo" src="Resources/css.png" alt="css-logo">
-        <h3 class="_css">CSS</h3>
-        <p class="_css">Dealing with all types of stylesheets for over an year for
-          designing websites as well as web applications while also debugging web applications
-          made by other developers and improving on it. Always willing to learn new styles
-          to make websites come to life.</p>
-      </div>
-      <br>
-      <div class="skill-row">
-        <img class="javascript-logo" src="Resources/javascript.png" alt="javascript-logo">
-        <h3 class="_javascript">JavaScript</h3>
-        <p class="_javascript">An years experience developing fully functional web apps
-          and websites with interactive user interfraces and dealing with various modules and
-          libraries. Still learning and improving to be more efficient in JavaScript and more
-          languages like React.js, Node.js and more.</p>
-      </div>
-      <br>
+
+    <div style="color: #777;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
+      <h3 style="text-align:center;">I am a Software developer</h3>
+      <p>I am currently learning and growing as a fullstack developer learning both front end and back end development. My experience spans over many languages mainly being Java, JavaScript, HTML, CSS and Python. I am knowledgable in C, C++ and C# as well
+      but am not as profound in them as I am with the languages mentioned earlier. My experience comes from many personal projects and real world applications that I have worked on using the prior languages and have worked with a team before to develop a real
+      world application as well as a website where we had roles assigned to each team member and worked towards a goal with set timeline and planning.</p>
     </div>
-    <hr class="top-divider">
-  </div>
 
-  <!-- Scripting -->
+    <div class="bgimg-2">
+      <div class="caption">
+      <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">My Interests</span>
+      </div>
+    </div>
 
-  <script src="index.js" charset="utf-8"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <div style="position:relative;">
+      <div style="color:#ddd;background-color:#282E34;text-align:center;padding:50px 80px;text-align: justify;">
+      <p>I like to use my free time either gaming or coding and draw or design some graphics in my free time every once in a while. I love to take on new projects and work on things that keep me going, always thinking of new ideas to create and add to my knowledge.
+      I believe doing what you love is the cornerstone of having abundance in your life which always have me on the lookout for new hobbies that I can adopt and discovering new things. My curiosity is what I believe pushes me to learn new things and improve upon
+      myself whenever and wherever I can.</p>
+      </div>
+    </div>
 
-</body>
-<footer>
-  <div class="foot">
-    <a href="mailto:tanveerswaich1@gmail.com">Contact Me</a>
-  </div>
-</footer>
+    <div class="bgimg-3">
+      <div class="caption">
+      <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">My Strengths</span>
+      </div>
+    </div>
 
+    <div style="position:relative;">
+      <div style="color:#ddd;background-color:#282E34;text-align:center;padding:50px 80px;text-align: justify;">
+      <p>Never giving up until I can find a solution to the challenges that I face is what I believe to be my greatest strength as from my past experiences I tend to face challenges head on rather than looking for a different path when faced with an obstacle. Other than
+      that I have a habbit of always planning things ahead of time and breaking the project into small parts by setting milestones and time frames for all my projects, this practice is what I believe has made me punctual and very efficient with deadlines and timelines
+      as it helps me manage my time better and give more time to important processes such as testing and planning phase for my projects.</p>
+      </div>
+    </div>
+
+    <div class="bgimg-1">
+      <div class="caption">
+        <a href="skillPage.html"><span class="border">More About Me</span></a>
+      </div>
+    </div>
+
+  </body>
+  <footer>
+    <span><a href="http://www.freepik.com">Backgrounds Designed by fullvector / Freepik</a></span>
+  </footer>
 </html>
