Snake game added after testing and implementation

--- a/skillPage.html
+++ b/skillPage.html
@@ -50,7 +50,7 @@
           </a>
           <ul class="dropdown-menu" aria-labelledby="projectsButton">
               <li><a class="dropdown-item" href="diceGame/diceGame.html">Dice Game</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><a class="dropdown-item" href="snakeGame/snakeGame.html">Snake Game</a></li>
               <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
         </li>
