--- a/snakeGame/snakeGame.html
+++ b/snakeGame/snakeGame.html
@@ -49,11 +49,26 @@
   </div>
   <div class="container-fluid controls">
     <!-- Added button stubs to space the buttons -->
-    <button type="button" class="btn btn-success btn-lg ctrl" id="start" value="Start" onclick="drawGame();">Start</button>
+    <button type="button" class="btn btn-success btn-lg ctrl" id="start" value="Start" onclick="startGame();">Start</button>
     <button type="button" class="btn btn-lg ctrl spacer" name="spacer"></button>
     <a href="snakeGame.html" class="btn btn-warning btn-lg ctrl">Reset</a>
     <button type="button" class="btn btn-lg ctrl spacer" name="spacer"></button>
     <a href="../skillPage.html" class="btn btn-dark btn-lg ctrl">Go Back</a>
+    <div class="volumeControls">
+      <label class="volume">
+      <input type="checkbox" id="volumeCheck">
+      <svg viewBox="0 0 108 96">
+          <path d="M7,28 L35,28 L35,28 L59,8 L59,88 L35,68 L7,68 C4.790861,68 3,66.209139 3,64 L3,32 C3,29.790861 4.790861,28 7,28 Z"></path>
+          <path d="M79,62 C83,57.3333333 85,52.6666667 85,48 C85,43.3333333 83,38.6666667 79,34 L49,3"></path>
+          <path d="M95,69 C101.666667,61.6666667 105,54.3333333 105,47 C105,39.6666667 101.666667,32.3333333 95,25 L75.5,6 L49,33"></path>
+      </svg>
+      </label>
+
+      <!-- dribbble -->
+      <a class="dribbble" href="https://dribbble.com/shots/7616797-Volume-Toggle" target="_blank">
+        <img src="https://dribbble.com/assets/logo-small-2x-9fe74d2ad7b25fba0f50168523c15fda4c35534f9ea0b1011179275383035439.png" alt="">
+      </a>
+    </div>
   </div>
   <script type="text/javascript" src="snakeGame.js"></script>
 </body>
